# looped-experiments

./: .gitignore  MANIFEST.in  README.md  Results.md  T-README.md  main.py  pyproject.toml  settings.ini
configs/: base.yaml  config.yaml  training.yaml
configs/model/: base.yaml  loop.yaml
configs/tasks/: LR.yaml  noisy-LR.yaml  sparse-LR.yaml
configs/training/: base.yaml  loop.yaml
evals/: 0.metrics-test.ipynb  curriculum.ipynb  tokens.ipynb
looped_experiments/: _modidx.py  all.py  curriculum.py  data.py  eval.py  main.py  models.py  nano_gpt.py  tasks.py  training.py  utils.py  wandb_utils.py
nbs/: 01_tasks.ipynb  02_models.ipynb  03.1_curriculum.ipynb  03_training.ipynb  04_eval.ipynb  data.ipynb  index.ipynb  nbdev.yml  sidebar.yml
scripts/: loop.sh  tokens.sh
