[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "looped-experiments"
version = "0.1.0"
authors = [{ name = "Slava Chaunin", email = "slava.chaunin@gmail.com" }]
readme = "README.md"
dependencies = [
    "torch",
    "numpy",
    "fastcore",
    "fastprogress",
    "matplotlib",
    "hydra-core",
    "wandb"
]

[project.scripts]
looped-run = "looped_experiments.main:run"

[project.urls]
Homepage = "https://github.com/ssslakter/looped-experiments"
Issues = "https://github.com/ssslakter/looped-experiments/issues"

[tool.setuptools]
packages = ["looped_experiments"]
package-data = { "looped_experiments"=["../configs/**/*"] }

